Banner Section Done

--- a/index.html
+++ b/index.html
@@ -4,52 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    ======= Navbar Started Here =======
+    <!-- ======= Navbar Started Here ======= -->
+    <nav id="navbar">
+        <div class="container">
+            <div class="nav_wrapper">
+                <div class="logo">
+                    <a href="#">
+                        <img src="./images/Group 27.png" alt="">
+                    </a>
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">PAGES</a></li>
+                        <li><a href="#">TRAVEL</a></li>
+                        <li><a href="#">BLOG</a></li>
+                        <li><a href="#">SHOP</a></li>
+                        <li><a href="#">LEMENTS</a></li>
+                    </ul>
+                </div>
+                <div class="nav_action">
+                    <a href="#" class="nav_action_item">
+                        <i class="fa-solid fa-message"></i>
+                    </a>
+                    <a href="#" class="nav_action_item">
+                        <i class="fa-brands fa-telegram"></i>
+                    </a>
+                    <a href="#" class="nav_action_item">
+                        <i class="fa-solid fa-heart"></i>
+                    </a>
+                    <a href="#" class="nav_action_item">
+                        <i class="fa-solid fa-plus"></i>
+                    </a>
 
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- ======= Navbar Ended Here ========= -->
+   
+    <!-- ======= Banner Started Here ======= -->
+    <section id="banner">
+        <div class="container">
+            <div class="banner_wrapper">
+                <h1>
+                    CHOOSE THE PERFECT DESTINATIONS.
+                </h1>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy 
+                    nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi 
+                    enim ad minim veniam, quis nostrud exerci tation.</p>
+                    <form>
+                        <div class="form_inner">
+                        <div class="banner_search">
+                        <input type="text" placeholder="Enter Your Location">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        </div>
+                        <div class="map_circle">
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
+                    </div>
+                    </form>
+                </div>
+        </div>
+    </section>
+    <!-- ======= Banner Ended Here ========= -->
+   
+    <!-- ======= Navbar Started Here ======= -->
 
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
+    <!-- ======= Navbar Ended Here ========= -->
+   
+    <!-- ======= Navbar Started Here ======= -->
 
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
-
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
-
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
-
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
-
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
-
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
-
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
-
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
-
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
-
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
-
-    ======= Navbar Ended Here =========
-    ======= Navbar Started Here =======
-
-    ======= Navbar Ended Here =========
-
+    <!-- ======= Navbar Ended Here ========= -->
+   
 </body>
 </body>
 </html>
