destination with pricing done

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h1>
                     CHOOSE THE PERFECT DESTINATIONS.
                 </h1>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy 
+                <p class="paragraph_class">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy 
                     nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi 
                     enim ad minim veniam, quis nostrud exerci tation.</p>
                     <form>
@@ -73,14 +73,72 @@
     </section>
     <!-- ======= Banner Ended Here ========= -->
    
-    <!-- ======= Navbar Started Here ======= -->
+    <!-- ======= Destination Started Here ======= -->
+    <section id="destination">
+        <div class="container">
+            <div class="destination_wrapper">
+                <div class="destination_content">
+                    <h4 class="sec_subtitle">FEATURED DESTINATION</h4>
+                    <h2 class="sec_title">CHOOSE <br> THE PERFECT ACCOMMODATION.</h2>
+                    <p class="paragraph_class">Lorem ipsum dolor sit amet, consectetuer adipiscing 
+                        elit, sed diam nonummy nibh euismod tincidunt ut 
+                        laoreet dolore magna aliquam erat volutpat.</p>
+                </div>
+                <div class="destination_video">
+                    <img src="./images/AdobeStock_324766477.png" alt="">
+                    <a class="destination_video_icon">
+                        <i class="fa-solid fa-play"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="book_now">
+                <div class="location_price">
+                    <div class="location">
+                        <h4>TRAVEL LOCATION</h4>
+                        <div class="star_wrapper">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
 
-    <!-- ======= Navbar Ended Here ========= -->
+                        </div>
+                    </div>
+                    <div class="price">
+                        <p class="paragraph_class">Tour Price</p>
+                        <span>$125,99</span>
+                    </div>
+                </div>
+                <div class="book_now_btn">
+                    Book Now
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ======= Destination Ended Here ========= -->
    
-    <!-- ======= Navbar Started Here ======= -->
+    <!-- ======= Special Package Started Here ======= -->
 
-    <!-- ======= Navbar Ended Here ========= -->
+    <!-- ======= Special Package Ended Here ========= -->
+
+    <!-- ======= Featured Started Here ======= -->
+
+    <!-- ======= Featured Ended Here ========= -->
    
+    <!-- ======= Destination 2 Started Here ======= -->
+
+    <!-- ======= Destination 2 Ended Here ========= -->
+    <!-- ======= Most Destination 2 Started Here ======= -->
+
+    <!-- ======= Most Destination 2 Ended Here ========= -->
+    <!-- ======= Counter Started Here ======= -->
+
+    <!-- ======= Counter Ended Here ========= -->
+    <!-- ======= NewsLatter Started Here ======= -->
+
+    <!-- ======= NewsLatter Ended Here ========= -->
+
+
 </body>
 </body>
 </html>
